--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port = 8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezome=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/seorang?serverTimezome=UTC
 spring.datasource.username=root
-spring.datasource.password=rhwlsrkafo
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.show_sql=true
 
