--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezome=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/seorang?serverTimezome=UTC
 spring.datasource.username=root
 spring.datasource.password=rhwlsrkafo
 
@@ -12,5 +12,5 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
