--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/seorang?serverTimezome=UTC
+spring.datasource.url=jdbc:mysql://seorang-rds.ccahm4mihdyj.ap-northeast-2.rds.amazonaws.com/seorang?serverTimezome=UTC
 spring.datasource.username=root
 spring.datasource.password=rhwlsrkafo
 
