--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port = 8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://seorang-rds.ccahm4mihdyj.ap-northeast-2.rds.amazonaws.com/seorang?serverTimezome=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://seorang-rds.ccahm4mihdyj.ap-northeast-2.rds.amazonaws.com/seorang
+spring.datasource.username=admin
+#spring.datasource.url=jdbc:mysql://localhost:3306/seorang?serverTimezone=Asia/Seoul
+#spring.datasource.username=root
 spring.datasource.password=rhwlsrkafo
+
 
 spring.jpa.properties.hibernate.show_sql=true
 
