--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 src/main/resources/application.properties
+*.properties
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -44,3 +46,4 @@ src/main/resources/application.properties
 *.iml
 out
 gen
+
